# search_suggest

./: .dockerignore  .env.example  .slugignore  .windsurfrules  Dockerfile  Procfile  README.md  app.json  app.py  docker-compose.yml  fastapi_dev  fastapi_run  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: requirements.yml
search_suggest/: api.py  cli.py  compare_models.py  embeddings.py  populate_db.py  taxonomy.py  test_connection.py  test_kitchen_query.py  test_search.py  vector_store.py
search_suggest/static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_connections.py  test_embeddings.py  test_search_queries.py  test_vector_store.py
