[project]
name = "search-suggest"
version = "0.1.0"
description = "Send in a query string and get back a google merchant category"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
